# dbt-pal

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
src/dbt/adapters/pal/: __init__.py  __version__.py  connections.py  impl.py
src/dbt/include/pal/: dbt_project.yml
src/dbt/include/pal/macros/materializations/: table.sql
tests/integration/: dbt_project.yml  lazy_utils.py  profiles.yml
tests/integration/data/: test_table.csv
tests/integration/expected/: python_model.csv  python_model_function_import.csv  python_model_with_import.csv  sql_model_table.csv  sql_model_view.csv
tests/integration/models/: python_model.py  python_model_empty_df.py  python_model_function_import.py  python_model_with_import.py  python_model_zero_rows.py  sources.yml  sql_model.sql  sql_model_table.sql  sql_model_view.sql
tests/integration/utils/: helpers.py
